--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,13 @@
-.App {
-  text-align: center;
+.app {
+  background-color: black;
+  color: #FFF;
+  margin: auto;
+  font-family: Inter, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  min-height: 100vh;
 }
