add about component

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 .app {
-  background-color: black;
+  background-color: #202020;
   color: #FFF;
   margin: auto;
   font-family: Inter, sans-serif;
