--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,6 +1,13 @@
 .techs {
     height: 625px;
+    min-width: 100%;
     background-color: #272727;
+}
+
+@media screen and (max-width: 768px){
+    .techs {
+        height: 567px;
+    }
 }
 
 .techs__title {
@@ -8,6 +15,13 @@
     margin: 0 auto;
     padding-top: 100px;
     border-bottom: 1px solid #DADADA;
+}
+
+@media screen and (max-width: 768px){
+    .techs__title {
+        width: 87%;
+        padding-top: 90px;
+    }
 }
 
 .techs__title-text {
@@ -34,6 +48,12 @@
     text-align: center;
 }
 
+@media screen and (max-width: 768px){
+    .techs__text {
+        margin: 80px auto 22px auto;
+    }
+}
+
 .techs__description {
     margin: 0 auto;
     max-width: 460px;
@@ -52,6 +72,13 @@
     list-style: none;
     width: 690px;
     margin: 0 auto;
+    padding: 0;
+}
+
+@media screen and (max-width: 768px){
+    .techs__stack {
+        width: 648px;
+    }
 }
 
 .techs__item {
@@ -68,4 +95,12 @@
     background-color: #303030;
     border: none;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 768px){
+    .techs__item {
+        width: 84px;
+        font-size: 12px;
+        line-height: 15px;
+    }
 }
