--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -11,6 +11,12 @@
     }
 }
 
+@media screen and (max-width: 555px){
+    .about {
+        height: 641px;
+    }
+}
+
 .about__title {
     margin: 0 auto;
     padding-top: 110px;
@@ -20,6 +26,12 @@
 @media screen and (max-width: 768px){
     .about__title {
         padding-top: 90px;
+    }
+}
+
+@media screen and (max-width: 555px){
+    .about__title {
+        padding-top: 70px;
     }
 }
 
@@ -33,12 +45,37 @@
     text-align: left;
 }
 
+@media screen and (max-width: 555px){
+    .about__title-text {
+        margin-bottom: 28px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
 .about__content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     column-gap: 40px;
     row-gap: 26px;
     padding-top: 70px;
+    grid-auto-flow: column;
+}
+
+@media screen and (max-width: 768px){
+    .about__content {
+        column-gap: 30px;
+        row-gap: 22px;
+    }
+}
+
+@media screen and (max-width: 555px){
+    .about__content {
+        padding-top: 60px;
+        row-gap: 0;
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 .about__text {
@@ -49,6 +86,14 @@
     font-weight: 400;
     line-height: 24px;
     letter-spacing: -0.04em;
+}
+
+@media screen and (max-width: 555px){
+    .about__text  {
+        margin-bottom: 16px;
+        font-size: 18px;
+        line-height: 22px;
+    }
 }
 
 .about__paragraph {
@@ -67,6 +112,14 @@
     }
 }
 
+@media screen and (max-width: 555px){
+    .about__paragraph {
+        margin-bottom: 56px;
+        font-size: 11px;
+        line-height: 16px;
+    }
+}
+
 .about__graph {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -81,6 +134,12 @@
     }
 }
 
+@media screen and (max-width: 555px){
+    .about__graph {
+        padding-top: 4px;
+    }
+}
+
 .about__period {
     margin: 0 auto;
     padding: 9px 0;
@@ -90,6 +149,15 @@
     font-weight: 400;
     line-height: 17px;
     width: 100%;
+}
+
+@media screen and (max-width: 555px){
+    .about__period {
+        padding: 11px 0;
+        font-size: 11px;
+        line-height: 13px;
+        text-align: center;
+    }
 }
 
 .about__period_first {
@@ -109,4 +177,11 @@
     font-style: normal;
     font-weight: 500;
     line-height: 17px;
+}
+
+@media screen and (max-width: 555px){
+    .about__description {
+        font-size: 11px;
+        line-height: 13px;
+    }
 }
