--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,6 +15,12 @@
     }
 }
 
+@media screen and (max-width: 555px){
+    .header {
+        padding-bottom: 32px;
+    }
+}
+
 .header__logo-nav {
     display: flex;
     flex-direction: row;
@@ -45,6 +51,14 @@
     margin: auto 0;
 }
 
+@media screen and (max-width: 555px){
+    .header__link {
+        margin: auto 0;
+        font-size: 10px;
+        line-height: 16px;
+    }
+}
+
 .header__button {
     margin: auto 0 auto 14px;
     width: 76px;
@@ -59,4 +73,11 @@
     background-color: #3DDC84;
     border: none;
     border-radius: 3px;
+}
+
+@media screen and (max-width: 555px){
+    .header__button {
+        font-size: 10px;
+        line-height: 16px;
+    }
 }
