--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -6,6 +6,12 @@
     margin: 0 auto;
 }
 
+@media screen and (max-width: 555px){
+    .nav {
+        width: 258px;
+    }
+}
+
 .nav__button {
     width: 96px;
     padding: 10px 0;
@@ -19,4 +25,13 @@
     background-color: #303030;
     border: none;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 555px){
+    .nav__button {
+        width: 82px;
+        padding: 5px 0;
+        font-size: 10px;
+        border-radius: 6px;
+    }
 }
