--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -81,3 +81,22 @@
         line-height: 16px;
     }
 }
+
+.header__account-logo {
+    margin: auto 0 auto 13px;
+    width: 10px;
+    height: 10px;
+    padding: 10px 10px;
+    background-color: #313131;
+    border: none;
+    border-radius: 6px;
+    background-image: url("../../images/account-logo.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+@media screen and (max-width: 768px){
+    .header__account-logo {
+        background-image: url("../../images/menu-header.svg");
+    }
+}
