--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -181,6 +181,10 @@
     text-decoration: none;
 }
 
+.me__link:hover {
+    opacity: 0.8;
+}
+
 .me__portfolio {
     margin: 0 auto 30px 0;
     color: #8B8B8B;
@@ -209,6 +213,10 @@
 
 .me__portfolio-link:last-of-type {
     border-bottom: none;
+}
+
+.me__portfolio-link:hover {
+    opacity: 0.8;
 }
 
 .me__portfolio-text {
