--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,8 @@
 .header {
     width: 89%;
     margin: 0 auto;
-    padding-top: 29px;
-    padding-bottom: 38px;
+    padding-top: 18px;
+    padding-bottom: 18px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 768px){
     .header {
-        width: 87%;
+        width: 92%;
         padding-top: 18px;
     }
 }
@@ -38,7 +38,7 @@
     margin: auto 16px auto 0;
     color: #FFFFFF;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 13px;
     line-height: 18px;
     text-align: right;
@@ -51,12 +51,21 @@
     margin: auto 0;
 }
 
+.header__link:hover {
+    opacity: 0.7;
+}
+
 @media screen and (max-width: 555px){
     .header__link {
         margin: auto 0;
         font-size: 10px;
+        font-weight: 500;
         line-height: 16px;
     }
+}
+
+.header__link_active {
+    font-weight: 500;
 }
 
 .header__button {
@@ -66,13 +75,18 @@
     color: #202020;
     font-style: normal;
     font-weight: normal;
-    font-size: 13px;
-    line-height: 18px;
+    font-size: 12px;
+    line-height: 32px;
     text-align: center;
+    vertical-align: middle;
     text-decoration: none;
     background-color: #3DDC84;
     border: none;
     border-radius: 3px;
+}
+
+.header__button:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 555px){
@@ -94,11 +108,21 @@
     background-size: 11px 11px;
 }
 
+.header__account-logo:hover {
+    opacity: 0.7;
+}
+
 @media screen and (max-width: 768px){
     .header__account-logo {
         background-image: url("../../images/menu-header.svg");
         background-color: #202020;
-        background-size: 28px 28px;
+        background-size: 44px 44px;
         border-radius: 0;
+    }
+}
+
+@media screen and (max-width: 555px){
+    .header__account-logo {
+        background-size: 40px 43px;
     }
 }
