--- a/src/components/MenuPopup/MenuPopup.css
+++ b/src/components/MenuPopup/MenuPopup.css
@@ -5,9 +5,63 @@
     width: 100%;
     height: 100%;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .3);
     text-align: center;
     visibility: hidden;
     opacity: 0;
     transition: all ease-in-out 0.5s;
+}
+
+.popup_opened {
+    visibility: visible;
+    transition: all ease-in-out 0.5s;
+    opacity: 1;
+}
+
+.popup__container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 68%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background: rgba(32, 32, 32, 1);
+}
+
+@media screen and (max-width: 320px){
+    .popup__container {
+        width: 100%;
+    }
+}
+
+.popup__close-button {
+    position: absolute;
+    top: 22px;
+    right: 22px;
+    width: 22px;
+    height: 22px;
+    background-image: url("../../images/close-button.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: unset;
+    cursor: pointer;
+    border: none;
+}
+
+.popup__close-button:hover {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 320px){
+    .popup__close-button {
+        top: 13px;
+        right: 13px;
+    }
+}
+
+.popup__pages-nav {
+    margin: 159px auto 0 auto;
+    display: flex;
+    flex-direction: column;
 }
