--- a/src/components/MenuPopup/MenuPopup.css
+++ b/src/components/MenuPopup/MenuPopup.css
@@ -62,6 +62,58 @@
 
 .popup__pages-nav {
     margin: 159px auto 0 auto;
+    gap: 26px;
     display: flex;
     flex-direction: column;
+}
+
+.popup__link {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    margin: 0 auto;
+    padding-bottom: 4px;
+}
+
+.popup__link:hover {
+    opacity: 0.7;
+}
+
+.popup__link-account {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.popup__link_active {
+    text-decoration: none;
+    padding-bottom: 2px;
+    border-bottom: 2px solid #FFFFFF;
+}
+
+.popup__account-nav {
+    margin: auto auto 92px auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.popup__account-logo {
+    margin: auto 0 0 13px;
+    padding: 19px 19px;
+    background-color: #313131;
+    border: none;
+    border-radius: 6px;
+    background-image: url("../../images/account-logo.svg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 11px 11px;
+}
+
+.popup__account-logo:hover {
+    opacity: 0.8;
 }
