--- a/src/components/MenuPopup/MenuPopup.css
+++ b/src/components/MenuPopup/MenuPopup.css
@@ -67,6 +67,13 @@
     flex-direction: column;
 }
 
+@media screen and (max-width: 320px){
+    .popup__pages-nav {
+        margin-top: 144px;
+        gap: 24px;
+    }
+}
+
 .popup__link {
     color: #FFFFFF;
     font-size: 18px;
@@ -78,6 +85,12 @@
     border: none;
     margin: 0 auto;
     padding-bottom: 4px;
+}
+
+@media screen and (max-width: 320px){
+    .popup__link {
+        padding-bottom: 9px;
+    }
 }
 
 .popup__link:hover {
@@ -100,6 +113,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+@media screen and (max-width: 320px){
+    .popup__account-nav {
+        margin-bottom: 48px;
+    }
 }
 
 .popup__account-logo {
