--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,26 +1,50 @@
 .search {
-    background-color: #2F2F2F;
+    /*background-color: #2F2F2F;*/
     width: 89%;
     margin: 70px auto 69px auto;
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    border-radius: 9px;
-    border-bottom: 1px solid #424242;
+    flex-wrap: wrap;
+    /*border-radius: 9px;*/
+    /*border-bottom: 1px solid #424242;*/
 }
 
-.search__input {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    width: 100%;
-    margin: 19px 0 19px 19px;
+@media screen and (max-width: 320px){
+    .search {
+        width: 94%;
+        margin-bottom: 46px;
+    }
+}
+
+.search__area {
+
+}
+
+@media screen and (max-width: 320px){
+    .search__area {
+        background-color: #2F2F2F;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 9px;
+        border-bottom: 1px solid #424242;
+        padding: 19px 0 19px 0;
+    }
 }
 
 .search__icon {
     color: #8B8B8B;
     margin-right: 10px;
+}
+
+@media screen and (max-width: 320px){
+    .search__icon {
+        width: 0;
+        height: 0;
+    }
 }
 
 .search__text {
@@ -32,21 +56,33 @@
     font-weight: 400;
     line-height: 20px;
     background-color: #2F2F2F;
-    width: 100%;
+}
+
+@media screen and (max-width: 320px){
+    .search__text {
+        font-size: 14px;
+        margin-left: 10px;
+    }
 }
 
 .search__text::placeholder {
     color: #8B8B8B;
 }
 
-.search__buttons {
-    width: 27%;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    margin-right: 30px;
-}
-
 .search__button {
 
+}
+
+@media screen and (max-width: 320px){
+    .search__button {
+        margin: auto 19px 0 auto;
+        padding: 17px 40px;
+        background-color: #4285F4;
+        border: none;
+        border-radius: 48px;
+        background-image: url("../../images/whitesearch-icon.svg");
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: 15px 10px;
+    }
 }
