--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -15,6 +15,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        margin-bottom: 109px;
     }
 }
 
@@ -22,7 +23,7 @@
     .search {
         background-color: #202020;
         width: 94%;
-        margin-bottom: 46px;
+        margin-bottom: 0;
         border-radius: 0;
     }
 }
@@ -115,4 +116,8 @@
     .search__button {
         margin: auto 19px 0 auto;
     }
+}
+
+.search__button:hover {
+    opacity: 0.8;
 }
