--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -75,6 +75,7 @@
 }
 
 .card__photo {
+    width: auto;
     min-height: 203px;
 }
 
@@ -86,6 +87,8 @@
 
 @media screen and (max-width: 750px){
     .card__photo {
-        height: 168px;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit:cover;
     }
 }
