--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -4,6 +4,18 @@
     width: 31%;
 }
 
+@media screen and (max-width: 768px){
+    .register {
+        width: 52%;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .register {
+        width: 81%;
+    }
+}
+
 .register__rows {
     display: flex;
     flex-direction: column;
@@ -16,6 +28,19 @@
     line-height: 29px;
     text-align: left;
     margin: 40px auto 20px auto;
+}
+
+@media screen and (max-width: 320px){
+    .register__welcome {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .register__logo {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 form label {
@@ -56,6 +81,17 @@ form label {
     border: none;
 }
 
+@media screen and (max-width: 320px){
+    .register__button {
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 15px;
+        text-align: center;
+        margin-top: 157px;
+    }
+}
+
 .register__button:hover {
     opacity: 0.8;
 }
@@ -64,11 +100,21 @@ form label {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 16px;
+}
+
+@media screen and (max-width: 480px){
+    .register__signin {
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 15px;
+        text-align: center;
+    }
 }
 
 .register__signin p {
     margin-right: 6px;
+    color: #8B8B8B;
 }
 
 .register__login-link {
