--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -18,6 +18,42 @@
     }
 }
 
+.me__title {
+    margin: 0 auto;
+    padding-top: 110px;
+    border-bottom: 1px solid #DADADA;
+}
+
+@media screen and (max-width: 768px){
+    .me__title {
+        padding-top: 90px;
+    }
+}
+
+@media screen and (max-width: 555px){
+    .me__title {
+        padding-top: 70px;
+    }
+}
+
+.me__title-text {
+    margin: auto auto 23px 0;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: -0.04em;
+    text-align: left;
+}
+
+@media screen and (max-width: 555px){
+    .me__title-text {
+        margin-bottom: 28px;
+        font-size: 18px;
+        line-height: 22px;
+    }
+}
+
 .me__about {
     display: flex;
     flex-direction: row;
