--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -4,7 +4,7 @@
     margin: auto;
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 655px){
     .filter {
         margin: 45px auto 44px auto;
     }
@@ -28,13 +28,19 @@
     content: "";
     height: 16px;
     width: 16px;
-    top: 172px;
+    top: 175px;
     background-color: #F5F5F5;
     transition: .4s;
     border-radius: 50%;
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 768px){
+    .filter__slider:before {
+        top: 173px;
+    }
+}
+
+@media screen and (max-width: 655px){
     .filter__slider:before {
         top: 288px;
     }
@@ -56,7 +62,7 @@
     margin-left: 13px;
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 655px){
     .filter__text{
         font-size: 11px;
     }
