--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -12,6 +12,18 @@
 
 @media screen and (max-width: 760px){
     .content {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 629px){
+    .content {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 485px){
+    .content {
         width: 94%;
     }
 }
@@ -31,14 +43,14 @@
     }
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 629px) {
     .content__elements {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 1fr);
     }
 }
 
-.content-more__button {
+.content__more {
     width: 100%;
     height: 36px;
     margin-bottom: 80px;
