--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -149,6 +149,7 @@
     font-weight: 400;
     line-height: 17px;
     width: 100%;
+    background-color: #303030;
 }
 
 @media screen and (max-width: 555px){
@@ -160,13 +161,9 @@
     }
 }
 
-.about__period_first {
+.about__period:first-of-type {
     color: black;
     background-color: #3DDC84;
-}
-
-.about__period-second {
-    background-color: #303030;
 }
 
 .about__description {
