--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -100,6 +100,13 @@
     color: #8B8B8B;
 }
 
+.search__text-error {
+    top: 230px;
+    padding-left: 5px;
+    position: fixed;
+    color: red;
+}
+
 .search__button {
     margin: 0;
     padding: 17px 40px;
