--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -94,8 +94,9 @@
 }
 
 .card__photo {
-    width: auto;
-    min-height: 203px;
+    width: 100%;
+    height: 203px;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1230px){
@@ -108,6 +109,5 @@
     .card__photo {
         max-width: 100%;
         max-height: 100%;
-        object-fit:cover;
     }
 }
