--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -107,7 +107,7 @@
 
 @media screen and (max-width: 750px){
     .card__photo {
-        max-width: 100%;
-        max-height: 100%;
+        width: 300px;
+        height: 168px;
     }
 }
