--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -32,6 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    text-decoration: none;
 }
 
 .card__film-name {
