--- a/src/components/ErrorPage/ErrorPage.css
+++ b/src/components/ErrorPage/ErrorPage.css
@@ -45,6 +45,8 @@
     font-weight: 400;
     line-height: 17px;
     text-align: center;
+    background-color: #202020;
+    border: none;
 }
 
 @media screen and (max-width: 320px){
