--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -94,6 +94,8 @@
     color: #EE3465;
     text-decoration: none;
     display: inline-block;
+    background-color: #202020;
+    border: none;
 }
 
 .profile__success {
